Add ListDefinitions RPC
Adding an RPC for listing definitions. By default it's a server side
streaming RPC which will auto paginate and return all records.
Optionally, the caller can provide a combination of AfterKey and
MaxResults to handle pagination on their own.
